[package]
name = "sdl2_rust"
version = "0.1.0"
authors = ["Youngermaster <juanmanuel12.13jmyh81@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"

[target.arm-unknown-linux-musleabi]
image = "youngermaster/rustsdl2:rpizerow"
